@@ -1482,8 +1482,13 @@ public class CommonMsgs extends StdLibrary implements CommonCommands
 			||(mob.riding()!=null)
 			||(CMLib.flags().isWatery(mob.location())))
 			{
-				long h=mob.playerStats().getHygiene();
-				if((h>0)&&(h<minHygiene)&&(msg.sourceMinor()!=CMMsg.TYP_LEAVE))
+				final long h=mob.playerStats().getHygiene();
+				if((h>0)
+				&&(h<minHygiene)
+				&&(msg.sourceMinor()!=CMMsg.TYP_LEAVE)
+				&&((!CMLib.flags().isFlying(mob))
+					||(mob.location().domainType()==Room.DOMAIN_INDOORS_UNDERWATER)
+					||(mob.location().domainType()==Room.DOMAIN_OUTDOORS_UNDERWATER)))
 				{
 					mob.playerStats().adjHygiene(-h);
 					mob.tell(L("You can't get any cleaner here."));
