@@ -27,6 +27,7 @@
   26. Archon wands/staffs now have GAIN ability to grant spells
   27. Yet more Druid stuff: Sea Lore, Summon Chum, and Water Cover
   28. New Druid sub-class: Mer
+  29. Golem races can now see in the dark.
 # Build 5.9.1 Released 01/04/2016
    1. "Who accounts", used by an archon, can quickly list the account name of each player online.
    2. New Achievement event "GOTITEM", and new rewards (see new stats below and achievements.ini)
